--- a/style.css
+++ b/style.css
@@ -45,28 +45,28 @@
 	}
 	
 	.footer{width:1200px;}
-	.LinkImageBox{width: 530px; float:left; margin-top: 5px; margin-bottom: 50px;}
-	.ricNaviImageBox{width: 250px; float:left; margin-left: 10px;}
-	img.ricNaviImage{width: 183px;}
-	img.LinkricNaviImageRespons{width: 183px;}
-	img.LinkFBImage{width: 250px; float:left; margin-left:20px;}
-
-	.footerMenuBox { width: 500px; float: right; margin-top:10px;}
+	.LinkImageBox{width:80%; margin:auto;}
+	.chibit{height:200px; float:left;}
+	img.ricNaviImage{height:120px; margin-left:20px; margin-top:50px;}
+	img.LinkricNaviImageRespons{width: 120px; margin-left:50px;}
+	.footerMenuBox { margin-top:10px; background-color: #1f499d;}
 	.footerMenu {
-	    width : 100%;
+	    width : 40%;
 	    display:table;
 	    table-layout:fixed;
-	    text-align:right;
+	    text-align:center;
+	    font-color:white;
+	    height:30px;
 	}
-	ul.footerMenu { margin: 0; padding: 0; }
+	ul.footerMenu { margin: auto; padding: 0; }
 	li.footerMenu { display: table-cell; vertical-align: middle; margin: 0; padding: 0; }
 
-	.footerMenuLink:link {color: black; text-decoration: none; font-size: 1em;}
-	.footerMenuLink:visited{color: black; text-decoration: none; font-size: 1em;}
-	.footerMenuLink:hover {color: black; text-decoration: none; font-size: 1em;}
-	.footerMenuLink:active {color: black; text-decoration: none; font-size: 1em;}
+	.footerMenuLink:link {color: white; text-decoration: none; font-size: 1em;}
+	.footerMenuLink:visited{color: white; text-decoration: none; font-size: 1em;}
+	.footerMenuLink:hover {color: white; text-decoration: none; font-size: 1em;}
+	.footerMenuLink:active {color: white; text-decoration: none; font-size: 1em;}
 
-	.copyright{text-align:center; font-size: 13px; margin-top: 50px; padding: 8px 0; background-color: #1f499d;}
+	.copyright{text-align:center; font-size: 13px; margin-top: 10px; padding: 8px 0; background-color: white;}
 
 	/* 社員紹介関連 */
 	.pageTitle {
@@ -311,14 +311,15 @@
 	    table-layout:fixed;
 	    text-align:center;
 	    font-size: 1em;
+	    color:white;
 	}
 	ul.footerMenu { margin: 0; padding: 0; font-size: 2vw;}
 	li.footerMenu { display: table-cell; vertical-align: middle; margin: 0; padding: 0; }
 
-	.footerMenuLink:link {color: black; text-decoration: none;}
-	.footerMenuLink:visited{color: black; text-decoration: none; }
-	.footerMenuLink:hover {color: black; text-decoration: none; }
-	.footerMenuLink:active {color: black; text-decoration: none;}
+	.footerMenuLink:link {color: white; text-decoration: none;}
+	.footerMenuLink:visited{color: white; text-decoration: none; }
+	.footerMenuLink:hover {color: white; text-decoration: none; }
+	.footerMenuLink:active {color: white; text-decoration: none;}
 
 	.copyright{text-align:center; font-size: 2vw; padding-top: 15px; background-color: #1f499d;}
 
