--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@
 	   height: 1px;
 	}
 	
-	.footer{width:1200px;}
-	.LinkImageBox{width:80%; margin:auto;}
+	footer{width:1200px; background-color:#e6f2f7;}
+	.LinkImageBox{width:80%; margin:auto; padding: 10px 0;}
 	.chibit{height:200px; float:left;}
 	img.ricNaviImage{height:120px; margin-left:20px; margin-top:50px;}
 	img.LinkricNaviImageRespons{width: 120px; margin-left:50px;}
@@ -56,7 +56,7 @@
 	    table-layout:fixed;
 	    text-align:center;
 	    font-color:white;
-	    height:30px;
+	    height:40px;
 	}
 	ul.footerMenu { margin: auto; padding: 0; }
 	li.footerMenu { display: table-cell; vertical-align: middle; margin: 0; padding: 0; }
@@ -66,7 +66,7 @@
 	.footerMenuLink:hover {color: white; text-decoration: none; font-size: 1em;}
 	.footerMenuLink:active {color: white; text-decoration: none; font-size: 1em;}
 
-	.copyright{text-align:center; font-size: 13px; margin-top: 10px; padding: 8px 0; background-color: white;}
+	.copyright{text-align:center; font-size: 13px; margin-top: 0; padding: 0 0; height:40px; line-height: 40px;}
 
 	/* 社員紹介関連 */
 	.pageTitle {
@@ -297,7 +297,7 @@
 	   border-color: black;
 	   height: 1px;
 	}
-	.footer{width:100%;}
+	footer{width:100%;}
 	.LinkImageBox{width: 75%; float:left; text-align:center; margin-top: 5px; margin-bottom: 5px;}
 	.ricNaviImageBox{width: 45%; float:left; margin-bottom:10px;}
 	img.ricNaviImage{width: 100%;}
