--- a/style_philosophy.css
+++ b/style_philosophy.css
@@ -108,7 +108,7 @@
 	#wrapper_list{
 		text-align: center;
 		width: 100%;
-		background-color: #F5F6CE;
+		background-color: #F5F6E2;
 		padding: 1em 0 0.3em 0;
 		margin: 2% 0;
 	}
@@ -123,8 +123,8 @@
 		text-align: center;
 		font-size: 120%;
 		font-weight: 545;
-		color: #330000;
-		-webkit-text-stroke:0.6px #330000;
+		color: #300000;
+		-webkit-text-stroke:0.6px #300000;
 		margin: 2% 0 1% 0;
 	}
 
@@ -135,8 +135,8 @@
 	    padding: 18px 20px 18px 25px;
 	    margin: 1.5em 0 2em 16em;
 	    color: #000000;
-	    border-top: double 7px #330000;
-	    border-bottom: double 7px #330000;
+	    border-top: double 7px #300000;
+	    border-bottom: double 7px #300000;
 		font-weight: 800;
 	}
 
