--- a/style_working.css
+++ b/style_working.css
@@ -4,10 +4,11 @@
 
 /* bodyの両サイドに余白を作る */
 .overview {
-	padding-left: 10%;
-	padding-right: 10%;
+	background-image: url(images/back.png);
+	width: 1024px;
+	margin-left: auto;
+	margin-right: auto;
 }
-
 
 /* 仕事内容部分*/
 h1 {
@@ -15,17 +16,11 @@ h1 {
 	padding: 0.5em;         /*文字まわり（上下左右）余白*/
 }
 
-h2 {
-	color: #0000cd;
-}
-
 .text {
 	text-align: center;
 }
 
-
 img.image1 {
-	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -37,7 +32,7 @@ img.image2 {
 }
 
 img.image3 {
-	display: block;
+	align: left;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -67,6 +62,18 @@ img.image7 {
 }
 
 img.image8 {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+img.image9 {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+img.image10 {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
