--- a/style_outline.css
+++ b/style_outline.css
@@ -3,69 +3,69 @@
 ******************************** */
 
 body{
-	width: 1024px;
-	padding-left: 10%;
+	width: 1366px;		/*全体の横幅*/
+	padding-left: 10%;		/* 両端に空白 */
 	padding-right: 10%;
 	font-family: "游ゴシック";
-	background-image: url(images/background_image.png);
 }
 
 /* 会社概要部分*/
 h1 {
-	background: #BDBDBD; 
-	padding: 0.5em;  
-	width: 100%;
+background: #BDBDBD;    /*背景色*/
+padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 }
 
-table {
-	margin:0 auto;
-	border-collapse: collapse;
+/* 各項目の本文の内容のインデントを下げる*/
+p {
+	padding-left: 2em;
+	margin-bottom: 30px;
 }
 
-.wrap_cell {
-	border-top: 1px solid #c9c9c9;
-    border-bottom: 1px solid #c9c9c9;
+/*各項目の文字にスタイルをつける*/
+.p1 {                  /*縦のライン*/
+  position: relative;
+  padding: .25em 0 .5em .75em;
+  border-left: 6px solid #3498db;
 }
-
-
-.index{
-	vertical-align: top;
-    text-align: left;
-    font-weight: normal;
-    width: auto;
-    min-width: 15%;
-    height: auto;
-    padding: 20px;
-    background-color: #EFFBFB;
-}
-
-.contents {
-	vertical-align: middle;
-    width: auto;
-    height: auto;
-    padding: 20px;
+.p1::after {          /*横のライン*/
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: '';
+  width: 100%;
+  height: 0;
+  border-bottom: 1px solid #ccc;
 }
 
 /* 認定パートナー部分*/
+.partner_wrapper {
+	margin-left: 2em;
+}
+
 .partner {
-	margin: 0 0 30px 0; /* 上下に空白を開ける */
+	margin: 30px 0; /* 上下に空白を開ける */
 }
 
-/*会社住所*/
-.companyinfo {
-	display: inline-block;
-	float: left;
-	width: 30%;
-}
-
-/*本社と東京オフィスのgooglemap*/
+/*本社と東京オフィスのテキスト部分*/
 .google-box {
-	display: inline-block;
+	float: left;
 	width: 460px;
-	height: 430px;
-	margin-left: 5%;
+	height: 150px;
+    margin: 0 10px 0 15px;
+    padding: 0;
+    text-align: left;
 }
 
+/*各地図の位置*/
+.google-box2 {
+	float: left;
+    margin: 10px 0 40px 0;
+    padding: 0;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 450px;
+}
 
 /*floatをクリアする*/
 .clear {
@@ -83,39 +83,71 @@ table {
 ******************************** */
 @media screen and (max-width: 768px){
 
-body{
-	width: 768px;
-	padding-left: 10%;
-	padding-right: 10%;
-	font-family: "游ゴシック";
-	font-size: 0.95em;
-	background-image: url(images/background_image.png);
+
+
+/* bodyの両サイドに余白を作る */
+.overview{
+	padding-left: 5%;
+	padding-right: 5%;
+	font-size: 0.95em;	/* タブレット用変更箇所 */
 }
 
 /* 会社概要部分*/
 h1 {
-	background: #BDBDBD;  
-	padding: 0.5em;
-	width: 100%;
+background: #BDBDBD;    /*背景色*/
+padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 }
 
+/* 各項目の本文の内容のインデントを下げる*/
+p {
+	padding-left: 2em;
+	margin-bottom: 30px;
+}
 
+/*各項目の文字にスタイルをつける*/
+.p1 {                  /*縦のライン*/
+  position: relative;
+  padding: .25em 0 .5em .75em;
+  border-left: 6px solid #3498db;
+}
+.p1::after {          /*横のライン*/
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: '';
+  width: 100%;
+  height: 0;
+  border-bottom: 1px solid #ccc;
+}
 
+/* 認定パートナー部分*/
+.partner_wrapper {
+	margin-left: 2em;
+}
 
-/*認定パートナー*/
 .partner {
-	margin: 0 0 30px 0;
-}
-
-/*会社住所*/
-.companyinfo {
-	margin-right: 50%;
+	margin: 30px 0; /* 上下に空白を開ける */
 }
 
 /*本社と東京オフィスのテキスト部分*/
 .google-box {
-	margin: 0;
-	padding-top: 1%;
+	float: left;
+	width: 460px;
+	height: 150px;
+    margin: 0 10px 0 15px;
+    padding: 0;
+    text-align: left;
+}
+
+/*各地図の位置*/
+.google-box2 {
+	float: left;
+    margin: 10px 0 40px 0;
+    padding: 0;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 450px;
 }
 
 /*floatをクリアする*/
@@ -137,41 +169,71 @@ h1 {
 @media screen and (max-width:640px){
 
 
-body{
-	width: 640px;
-	padding-left: 10%;
-	padding-right: 10%;
-	font-family: "游ゴシック";
-	font-size: 0.85em;
-	background-image: url(images/background_image.png);
-}
 
+/* bodyの両サイドに余白を作る */
+.overview{
+	padding-left: 5%;
+	padding-right: 5%;
+	font-size: 0.85em;	/* スマホ用変更箇所 */
+}
 
 /* 会社概要部分*/
 h1 {
-	background: #BDBDBD;
-	padding: 0.5em;
-	width: 100%;
+background: #BDBDBD;    /*背景色*/
+padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 }
 
+/* 各項目の本文の内容のインデントを下げる*/
+p {
+	padding-left: 2em;
+	margin-bottom: 30px;
+}
+
+/*各項目の文字にスタイルをつける*/
+.p1 {                  /*縦のライン*/
+  position: relative;
+  padding: .25em 0 .5em .75em;
+  border-left: 6px solid #3498db;
+}
+.p1::after {          /*横のライン*/
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: '';
+  width: 100%;
+  height: 0;
+  border-bottom: 1px solid #ccc;
+}
 
 /* 認定パートナー部分*/
-.partner {
-	margin: 0 0 30px 0;
+.partner_wrapper {
+	margin-left: 2em;
 }
 
-/*会社住所*/
-.companyinfo {
-	margin-right: 50%;
+.partner {
+	margin: 30px 0; /* 上下に空白を開ける */
 }
 
 /*本社と東京オフィスのテキスト部分*/
 .google-box {
-	margin: 0;
-	padding-top: 1%;
+	float: left;
+	width: 460px;
+	height: 150px;
+    margin: 0 10px 0 15px;
+    padding: 0;
+    text-align: left;
 }
 
-
+/*各地図の位置*/
+.google-box2 {
+	float: left;
+    margin: 10px 0 40px 0;
+    padding: 0;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 450px;
+}
 
 /*floatをクリアする*/
 .clear {
