--- a/style_outline.css
+++ b/style_outline.css
@@ -7,6 +7,7 @@ body{
 	padding-left: 10%;		/* 両端に空白 */
 	padding-right: 10%;
 	font-family: "游ゴシック";
+	background-image: url(images/background_image.png);
 }
 
 /* 会社概要部分*/
@@ -15,56 +16,47 @@ background: #BDBDBD;    /*背景色*/
 padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 }
 
-/* 各項目の本文の内容のインデントを下げる*/
-p {
-	padding-left: 2em;
-	margin-bottom: 30px;
+.outline_wrapper {
+	height: 10%;
+	width: 80%;
+	margin: 0.5% 10%;
+	display: table;
 }
 
-/*各項目の文字にスタイルをつける*/
-.p1 {                  /*縦のライン*/
-  position: relative;
-  padding: .25em 0 .5em .75em;
-  border-left: 6px solid #3498db;
-}
-.p1::after {          /*横のライン*/
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: '';
-  width: 100%;
-  height: 0;
-  border-bottom: 1px solid #ccc;
+hr {
+  border-top: 1px solid #D8D8D8;
+  width: 80%;
 }
 
-/* 認定パートナー部分*/
-.partner_wrapper {
-	margin-left: 2em;
+.index {
+	width: 20%;
+	background-color: #CEF6F5;
+	display: table-cell;
+	vertical-align: middle;
+	padding-left: 1%;
+}
+
+.container {
+	display: table-cell;
+	vertical-align: middle;
+	padding-left: 1%;
 }
 
 .partner {
-	margin: 30px 0; /* 上下に空白を開ける */
+	padding-bottom: 2%;
 }
 
-/*本社と東京オフィスのテキスト部分*/
-.google-box {
-	float: left;
-	width: 460px;
-	height: 150px;
-    margin: 0 10px 0 15px;
-    padding: 0;
-    text-align: left;
+.address {
+	float:left;
+	width: 50%;
 }
 
 /*各地図の位置*/
-.google-box2 {
-	float: left;
-    margin: 10px 0 40px 0;
-    padding: 0;
-    width: 100%;
-    max-width: 600px;
-    height: 100%;
-    max-height: 450px;
+.google-box {
+	float: right;
+    /*width: 100%;*/
+    height: 430px;
+    width: 430px;
 }
 
 /*floatをクリアする*/
@@ -90,76 +82,30 @@ p {
 	padding-left: 5%;
 	padding-right: 5%;
 	font-size: 0.95em;	/* タブレット用変更箇所 */
+	max-width: 768px;
 }
 
 /* 会社概要部分*/
 h1 {
-background: #BDBDBD;    /*背景色*/
-padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+	background: #BDBDBD;    /*背景色*/
+	padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 }
 
-/* 各項目の本文の内容のインデントを下げる*/
-p {
-	padding-left: 2em;
-	margin-bottom: 30px;
-}
-
-/*各項目の文字にスタイルをつける*/
-.p1 {                  /*縦のライン*/
-  position: relative;
-  padding: .25em 0 .5em .75em;
-  border-left: 6px solid #3498db;
-}
-.p1::after {          /*横のライン*/
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: '';
-  width: 100%;
-  height: 0;
-  border-bottom: 1px solid #ccc;
-}
-
-/* 認定パートナー部分*/
-.partner_wrapper {
-	margin-left: 2em;
-}
-
-.partner {
-	margin: 30px 0; /* 上下に空白を開ける */
-}
-
-/*本社と東京オフィスのテキスト部分*/
-.google-box {
-	float: left;
-	width: 460px;
-	height: 150px;
-    margin: 0 10px 0 15px;
-    padding: 0;
-    text-align: left;
+.address {
+	float:left;
+	width: 40%;
 }
 
 /*各地図の位置*/
-.google-box2 {
-	float: left;
-    margin: 10px 0 40px 0;
-    padding: 0;
-    width: 100%;
-    max-width: 600px;
-    height: 100%;
-    max-height: 450px;
-}
-
-/*floatをクリアする*/
-.clear {
-    clear: both;
-    margin: 0;
-    padding: 0;
-}
-
+.google-box {
+	float: right;
+    /*width: 100%;*/
+    height: 230px;
+    width: 230px;
 }
 
 
+}
 
 
 
@@ -175,6 +121,7 @@ p {
 	padding-left: 5%;
 	padding-right: 5%;
 	font-size: 0.85em;	/* スマホ用変更箇所 */
+	max-width: 640px;
 }
 
 /* 会社概要部分*/
@@ -183,64 +130,19 @@ background: #BDBDBD;    /*背景色*/
 padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 }
 
-/* 各項目の本文の内容のインデントを下げる*/
-p {
-	padding-left: 2em;
-	margin-bottom: 30px;
-}
-
-/*各項目の文字にスタイルをつける*/
-.p1 {                  /*縦のライン*/
-  position: relative;
-  padding: .25em 0 .5em .75em;
-  border-left: 6px solid #3498db;
-}
-.p1::after {          /*横のライン*/
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: '';
-  width: 100%;
-  height: 0;
-  border-bottom: 1px solid #ccc;
-}
-
-/* 認定パートナー部分*/
-.partner_wrapper {
-	margin-left: 2em;
-}
-
-.partner {
-	margin: 30px 0; /* 上下に空白を開ける */
-}
-
-/*本社と東京オフィスのテキスト部分*/
-.google-box {
-	float: left;
-	width: 460px;
-	height: 150px;
-    margin: 0 10px 0 15px;
-    padding: 0;
-    text-align: left;
+.address {
+	float:left;
+	width: 40%;
 }
 
 /*各地図の位置*/
-.google-box2 {
-	float: left;
-    margin: 10px 0 40px 0;
-    padding: 0;
-    width: 100%;
-    max-width: 600px;
-    height: 100%;
-    max-height: 450px;
+.google-box {
+	float: right;
+    /*width: 100%;*/
+    height: 230px;
+    width: 230px;
 }
 
-/*floatをクリアする*/
-.clear {
-    clear: both;
-    margin: 0;
-    padding: 0;
-}
 
 }
 
