--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+*{
+	font-size:0.98em;
+	color:#333;
+	margin:0;
+	padding:0;
+	font-family:游ゴシック,serif;
+	line-height:2em;
+
+}
+
 /*===============================================
 ●style.css PC 画面の横幅が769px以上
 ================================================*/
