--- a/style_working.css
+++ b/style_working.css
@@ -5,15 +5,16 @@
 /* bodyの両サイドに余白を作る */
 .overview {
 	background-image: url(images/back.png);
-	width: 1024px;
+	width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 /* 仕事内容部分*/
-h1 {
-	background: #BDBDBD;    /*背景色*/
-	padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+img.title02 {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .text {
