--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 *{
 	font-size:0.98em;
 	color:#333;
@@ -5,7 +7,15 @@
 	padding:0;
 	font-family:游ゴシック,serif;
 	line-height:2em;
+}
 
+html{
+    scroll-behavior: smooth;
+	overflow-y:scroll;
+}
+
+img {
+	border:0;
 }
 
 /*===============================================
@@ -16,6 +26,7 @@
 	/* 全体部分 */
 	html{
     scroll-behavior: smooth;
+	overflow-y:scroll;
 	}
 	body {
 	    width: 1200px;
