--- a/style_working.css
+++ b/style_working.css
@@ -22,6 +22,7 @@ img.title02 {
 }
 
 img.image1 {
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -33,7 +34,7 @@ img.image2 {
 }
 
 img.image3 {
-	align: left;
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
