--- a/style.css
+++ b/style.css
@@ -98,145 +98,6 @@ img {
 
 	.copyright{text-align:center; font-size: 13px; margin-top: 0; padding: 0 0; height:40px; line-height: 40px;}
 
-	/* 社員紹介関連 */
-	.pageTitle {
-		font-size: 50px;
-		text-align: center;
-		background: lightgray;
-		padding-top: 25px;
-		padding-bottom: 25px;
-	}
-	
-	.testFrame{ width: 200px; height: 300px; border: solid 1px black; }
-	.staffCenter{ width: 755px; margin:auto; padding:auto;}
-	.center{width:200px;text-align:center; float:left; margin:0px 25px 25px 25px;}
-
-	.popupModal1 > input 
-	{ /* ラジオボックス非表示 */
-	    display: none;
-	}
-	.popupModal1 > input:nth-child(1) + label { 
-	    cursor: pointer;
-	}
-	.modalPopup2 { /* 初期設定 ポップアップ非表示 */
-	    display: none;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 
-	{/* ラジオ１ チェックでポップアップ表示 */
-	    display: block;
-	    z-index: 998;
-	    position: fixed;
-	    width: 90%;
-	    height: 80%;
-	    border-radius: 20px;
-	    left: 50%;
-	    top: 50%;
-	    margin-top: 30px;
-	    -webkit-transform: translate(-50%,-50%);
-	    -ms-transform: translate(-50%,-50%);
-	    transform: translate(-50%,-50%);
-	    background: #fff;
-	    padding: 10px 20px;
-	    overflow: hidden;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2
-	{
-         width: 600px;
-         height: 600px;
-         padding: 30px;
-
-    }
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label {
-	     left: 50% !important;
-	     top: 50% !important;
-	     margin-left: 270px !important;
-	     margin-top: -310px !important;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div {/* */
-	    overflow:auto;
-	    -webkit-overflow-scrolling:touch;
-	    display: inline-block;
-	    width: 100%;
-	    height: 100%;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > iframe {
-	    width: 100%;
-	      height:100%;
-	      border:none;
-	      display:block;
-	}
-
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > img {/* ポップアップの中の要素 */
-	max-width: 100%;
-	}
-	.popupModal1 > input:nth-child(1) + label ~ label {
-	    display: none;/* ラジオ１ 以外のラベルを初期は非表示 */
-
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label {
-	    width: 100%;
-	    height: 100%;
-	    background: rgba(0, 0, 0, 0.70);
-	    display: block;
-	    position: fixed;
-	    left: 0;
-	    top: 0;
-	    z-index: 997;
-	    text-indent: -999999px;
-	    overflow: hidden;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label {
-	    background: rgba(255, 255, 255, 0.5);
-	    display: inline-block;
-	    position: fixed;
-	    left: 10px;
-	    bottom: 20px;
-	    z-index: 999;
-	    width: 44pt;
-	    height: 44pt;
-	    font-size: 40px;
-	    border-radius: 50%;
-	    line-height: 44pt;
-	    text-align: center;
-	    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2);
-	}
-
-	.popupModal1 > input:nth-child(1) + label + input:nth-child(3):checked + label + input:nth-child(5) + label + .modalPopup2,
-	.popupModal1 > input:nth-child(1) + label + input:nth-child(3) + label + input:nth-child(5):checked + label + .modalPopup2 
-	{
-	 /* ラジオ２と３ どっちかチェックでポップアップ非表示 */
-	    display: none;
-	}
-
-
-	.modalPopup2 {
-	    animation: fadeIn 1s ease 0s 1 normal;
-	    -webkit-animation: fadeIn 1s ease 0s 1 normal;
-	}
-
-	@keyframes fadeIn {
-	    0% {opacity: 0}
-	    100% {opacity: 1}
-	}
-	@-webkit-keyframes fadeIn {
-	    0% {opacity: 0}
-	    100% {opacity: 1}
-	}
-
-	.popupModal1 .modalTitle {
-	     padding-bottom: .5em;
-	     margin: .5em 0;
-	     border-bottom:
-	     1px solid #ccc;
-	     font-weight: bold;
-	}
-	.popupModal1 .modalMain {
-	     color:#222;
-	     text-align: left;
-	     font-size: 14px;
-	     line-height: 1.8em;
-	}
-
 	/* 募集要項関連 */
 	.recruitTitle { font-size: 50px; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
 	.recruitBox{width:85%; display: block; margin:auto; margin-bottom:50px; padding:auto;}
@@ -257,6 +118,17 @@ img {
 	.square_btn:active {
 	    box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.1);
 	    transform: translateY(2px);
+	}
+	h2 {
+	    position: relative;
+	    line-height: 1.4;
+	    display: inline-block;
+	    top: 0px;
+	    font-size: 1.4em;
+	    font-family: 游明朝, serif;
+	    color: rgb(41, 51, 131);
+	    padding: 0.25em 1em;
+	    margin:auto;
 	}
 }
 
@@ -352,126 +224,6 @@ img {
 	.footerMenuLink:active {color: white; text-decoration: none;}
 
 	.copyright{text-align:center; font-size: 2vw; padding-top: 15px; background-color: #1f499d;}
-
-
-	/* 社員紹介関連 */
-	.pageTitle { font-size: 50px; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
-	
-	.testFrame{ width: 200px; height: 300px; border: solid 5px #008080; }
-	
-	.popupModal1 > input 
-	{ /* ラジオボックス非表示 */
-	    display: none;
-	}
-	.popupModal1 > input:nth-child(1) + label { 
-	    cursor: pointer;
-	}
-	.modalPopup2 { /* 初期設定 ポップアップ非表示 */
-	    display: none;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 
-	{/* ラジオ１ チェックでポップアップ表示 */
-	    display: block;
-	    z-index: 998;
-	    position: fixed;
-	    width: 90%;
-	    height: 80%;
-	    border-radius: 20px;
-	    left: 50%;
-	    top: 50%;
-	    margin-top: 30px;
-	    -webkit-transform: translate(-50%,-50%);
-	    -ms-transform: translate(-50%,-50%);
-	    transform: translate(-50%,-50%);
-	    background: #fff;
-	    padding: 10px 20px;
-	    overflow: hidden;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div {/* */
-	    overflow:auto;
-	    -webkit-overflow-scrolling:touch;
-	    display: inline-block;
-	    width: 100%;
-	    height: 100%;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > iframe {
-	    width: 100%;
-	      height:100%;
-	      border:none;
-	      display:block;
-	}
-
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > img {/* ポップアップの中の要素 */
-	max-width: 100%;
-	}
-	.popupModal1 > input:nth-child(1) + label ~ label {
-	    display: none;/* ラジオ１ 以外のラベルを初期は非表示 */
-
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label {
-	    width: 100%;
-	    height: 100%;
-	    background: rgba(0, 0, 0, 0.70);
-	    display: block;
-	    position: fixed;
-	    left: 0;
-	    top: 0;
-	    z-index: 997;
-	    text-indent: -999999px;
-	    overflow: hidden;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label {
-	    background: rgba(255, 255, 255, 0.5);
-	    display: inline-block;
-	    position: fixed;
-	    left: 10px;
-	    bottom: 20px;
-	    z-index: 999;
-	    width: 44pt;
-	    height: 44pt;
-	    font-size: 40px;
-	    border-radius: 50%;
-	    line-height: 44pt;
-	    text-align: center;
-	    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2);
-	}
-
-	.popupModal1 > input:nth-child(1) + label + input:nth-child(3):checked + label + input:nth-child(5) + label + .modalPopup2,
-	.popupModal1 > input:nth-child(1) + label + input:nth-child(3) + label + input:nth-child(5):checked + label + .modalPopup2 
-	{
-	 /* ラジオ２と３ どっちかチェックでポップアップ非表示 */
-	    display: none;
-	}
-
-
-	.modalPopup2 {
-	    animation: fadeIn 1s ease 0s 1 normal;
-	    -webkit-animation: fadeIn 1s ease 0s 1 normal;
-	}
-
-	@keyframes fadeIn {
-	    0% {opacity: 0}
-	    100% {opacity: 1}
-	}
-	@-webkit-keyframes fadeIn {
-	    0% {opacity: 0}
-	    100% {opacity: 1}
-	}
-
-	.popupModal1 .modalTitle {
-	     padding-bottom: .5em;
-	     margin: .5em 0;
-	     border-bottom:
-	     1px solid #ccc;
-	     font-weight: bold;
-	}
-	.popupModal1 .modalMain {
-	     color:#222;
-	     text-align: left;
-	     font-size: 14px;
-	     line-height: 1.8em;
-	}
-
 
 	/* 募集要項関連 */
 	.recruitTitle { font-size: 6vw; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
@@ -587,126 +339,6 @@ img {
 	.footerMenuLink:active {color: black; text-decoration: none;}
 
 	.copyright{text-align:center; font-size: 2vw; padding-top: 15px; background-color:#1f499d;}
-
-	/* 社員紹介関連 */
-	.pageTitle { font-size: 50px; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
-	.popupModal1 > input 
-	{ /* ラジオボックス非表示 */
-	    display: none;
-	}
-	.popupModal1 > input:nth-child(1) + label { 
-	    cursor: pointer;
-	}
-	.modalPopup2 { 
-		/* 初期設定 ポップアップ非表示 */
-	    display: none;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 
-	{/* ラジオ１ チェックでポップアップ表示 */
-	    display: block;
-	    z-index: 998;
-	    position: fixed;
-	    width: 90%;
-	    height: 80%;
-	    border-radius: 20px;
-	    left: 50%;
-	    top: 50%;
-	    margin-top: 30px;
-	    -webkit-transform: translate(-50%,-50%);
-	    -ms-transform: translate(-50%,-50%);
-	    transform: translate(-50%,-50%);
-	    background: #fff;
-	    padding: 10px 20px;
-	    overflow: hidden;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div {/* */
-	    overflow:auto;
-	    -webkit-overflow-scrolling:touch;
-	    display: inline-block;
-	    width: 100%;
-	    height: 100%;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > iframe {
-	    width: 100%;
-	      height:100%;
-	      border:none;
-	      display:block;
-	}
-
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > img {/* ポップアップの中の要素 */
-	max-width: 100%;
-	}
-	.popupModal1 > input:nth-child(1) + label ~ label {
-	    display: none;/* ラジオ１ 以外のラベルを初期は非表示 */
-
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label {
-	    width: 100%;
-	    height: 100%;
-	    background: rgba(0, 0, 0, 0.70);
-	    display: block;
-	    position: fixed;
-	    left: 0;
-	    top: 0;
-	    z-index: 997;
-	    text-indent: -999999px;
-	    overflow: hidden;
-	}
-	.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label {
-	    background: rgba(255, 255, 255, 0.5);
-	    display: inline-block;
-	    position: fixed;
-	    left: 10px;
-	    bottom: 20px;
-	    z-index: 999;
-	    width: 44pt;
-	    height: 44pt;
-	    font-size: 40px;
-	    border-radius: 50%;
-	    line-height: 44pt;
-	    text-align: center;
-	    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2);
-	}
-
-	.popupModal1 > input:nth-child(1) + label + input:nth-child(3):checked + label + input:nth-child(5) + label + .modalPopup2,
-	.popupModal1 > input:nth-child(1) + label + input:nth-child(3) + label + input:nth-child(5):checked + label + .modalPopup2 
-	{
-	 /* ラジオ２と３ どっちかチェックでポップアップ非表示 */
-	    display: none;
-	}
-
-
-	.modalPopup2 {
-	    animation: fadeIn 1s ease 0s 1 normal;
-	    -webkit-animation: fadeIn 1s ease 0s 1 normal;
-	}
-
-	@keyframes fadeIn {
-	    0% {opacity: 0}
-	    100% {opacity: 1}
-	}
-	@-webkit-keyframes fadeIn {
-	    0% {opacity: 0}
-	    100% {opacity: 1}
-	}
-
-	.popupModal1 .modalTitle {
-	     padding-bottom: .5em;
-	     margin: .5em 0;
-	     border-bottom:
-	     1px solid #ccc;
-	     font-weight: bold;
-	}
-	.popupModal1 .modalMain {
-	     color:#222;
-	     text-align: left;
-	     font-size: 14px;
-	     line-height: 1.8em;
-	}
-
-
-
-
 
 	/* 募集要項関連 */
 	.recruitTitle { font-size: 7vw; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
